--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
     </div>
 
     <section class="image">
-            <div>
-                <p class="Vector-text">Welcome to <br>
-                    midnight party </p>
-                <p class="vector-textt">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                    malesuada.
-                    </br>
-                    Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <p class="join">JOIN NOW</p>
+        <div>
+            <p class="Vector-text">Welcome to <br>
+                midnight party </p>
+            <p class="vector-textt">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                malesuada.
+                </br>
+                Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="join">
+                <button class="join-text">JOIN NOW</button>
             </div>
-            <div>
-                <img class="group-img" src="resources/Group 70.png" alt="">
-            </div>
+        </div>
+        <div>
+            <img class="group-img" src="resources/Group 70.png" alt="">
+        </div>
     </section>
 
     <div class="venu">
@@ -59,6 +61,26 @@
             <button class="btn">JOIN NOW</button>
         </div>
     </div>
+
+
+    <section>
+        <div class="best-gift">
+            <h4 class="gift-text">THE BEST GIFTS</h4>
+            <h2 class="gift-textb">Our Awesome Portfolio</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed
+                sodales risus ut pellentesque vel euismod.</p>
+        </div>
+            <div class="product">
+                <img src="resources/Rectangle 3.png" alt="">
+                <img src="resources/Rectangle 4.png" alt="">
+                <img src="resources/Rectangle 5.png" alt="">
+            </div>
+            <div class="items">
+                <img src="resources/Rectangle 6.png" alt="">
+                <img src="resources/Rectangle 7.png" alt="">
+                <img src="resources/Rectangle 8.png" alt="">
+            </div>
+    </section>
 
 
 </body>
