--- a/index.html
+++ b/index.html
@@ -70,18 +70,28 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed
                 sodales risus ut pellentesque vel euismod.</p>
         </div>
-            <div class="product">
-                <img src="resources/Rectangle 3.png" alt="">
-                <img src="resources/Rectangle 4.png" alt="">
-                <img src="resources/Rectangle 5.png" alt="">
-            </div>
-            <div class="items">
-                <img src="resources/Rectangle 6.png" alt="">
-                <img src="resources/Rectangle 7.png" alt="">
-                <img src="resources/Rectangle 8.png" alt="">
-            </div>
+        <div class="product">
+            <img src="resources/Rectangle 3.png" alt="">
+            <img src="resources/Rectangle 4.png" alt="">
+            <img src="resources/Rectangle 5.png" alt="">
+        </div>
+        <div class="items">
+            <img src="resources/Rectangle 6.png" alt="">
+            <img src="resources/Rectangle 7.png" alt="">
+            <img src="resources/Rectangle 8.png" alt="">
+        </div>
     </section>
 
+    <div class="subscribe">
+        <img src="resources/Group 61.png" alt="">
+        <h2>Subscribe Newsletter</h2>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+            sodalesrisus ut pellentesque vel euismod. </p>
+          <label class="container"> 
+             <input type="text" id="input-btn" placeholder="user@gmail.com">
+            <button class="sub-btn">Subscribe</button>
+          </label>
+    </div>
 
 </body>
 
