--- a/index.html
+++ b/index.html
@@ -87,12 +87,25 @@
         <h2>Subscribe Newsletter</h2>
         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
             sodalesrisus ut pellentesque vel euismod. </p>
-          <label class="container"> 
-             <input type="text" id="input-btn" placeholder="user@gmail.com">
-            <button class="sub-btn">Subscribe</button>
-          </label>
+
+        <input type="text" id="input-btn" placeholder="user@gmail.com">
+        <button class="sub-btn">Subscribe</button>
+
     </div>
 
 </body>
+<footer>
+    <div class="main">
+    <div>
+    <p>44, Big Building Roosevelt Street
+        Beach Gardens Florida 33410</p>
+    </div>
+    <div class="call">
+        <p>+00 123 584 124</p>     
+        <img src="resources/Website.png" alt="">
+        <p>www.website.com</p>      
+    </div>
+</div>
+</footer>
 
 </html>
