--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed
                 sodales risus ut pellentesque vel euismod.</p>
         </div>
+        <div class="mouse">
         <div class="product">
             <img src="resources/Rectangle 3.png" alt="">
             <img src="resources/Rectangle 4.png" alt="">
@@ -80,6 +81,7 @@
             <img src="resources/Rectangle 7.png" alt="">
             <img src="resources/Rectangle 8.png" alt="">
         </div>
+    </div>
     </section>
 
     <div class="subscribe">
